feat: injetar na Program.cs as configs do appsettings

--- a/Blog/Blog/appsettings.json
+++ b/Blog/Blog/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "JwtKey": "ThisIsASecretKeyForJwtTokenGeneration",
+  "Smtp": {
+    "Host": "smtp.example.com",
+    "Port": "587",
+    "Username": "",
+    "Password": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
