feat: criar servico de envio de email

--- a/Blog/Blog/appsettings.json
+++ b/Blog/Blog/appsettings.json
@@ -1,10 +1,10 @@
 {
   "JwtKey": "ThisIsASecretKeyForJwtTokenGeneration",
   "Smtp": {
-    "Host": "smtp.example.com",
+    "Host": "smtp.sendgrid.net",
     "Port": "587",
-    "Username": "",
-    "Password": ""
+    "Username": "apikey",
+    "Password": "senha"
   },
   "Logging": {
     "LogLevel": {
