feat: ajustar configs de envio de email

--- a/Blog/Blog/appsettings.json
+++ b/Blog/Blog/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "JwtKey": "ThisIsASecretKeyForJwtTokenGeneration",
+  "JwtKey": "C040542A77BC4E4A8AFAA389BFED7D70abcd",
   "Smtp": {
     "Host": "smtp.sendgrid.net",
     "Port": "587",
     "Username": "apikey",
-    "Password": "senha"
+    "Password": "senhaGeradaNaPlataforma"
   },
   "Logging": {
     "LogLevel": {
