--- a/Blog/Blog/appsettings.json
+++ b/Blog/Blog/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=BlogApi;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
+  },
   "JwtKey": "C040542A77BC4E4A8AFAA389BFED7D70abcd",
   "Smtp": {
     "Host": "smtp.sendgrid.net",
